--- a/3 Теги./24 Селектор потомков CSS/task24.1.html
+++ b/3 Теги./24 Селектор потомков CSS/task24.1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="task24.1.css">
 </head>
 <body>
     <ul>
