--- a/5 Блочная модель/67 Расширение элементов/task67.html
+++ b/5 Блочная модель/67 Расширение элементов/task67.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="task67.css">
 </head>
 <body>
-    <h1>Без своства  box-sizing.</h1>
+    <h1>Без свойства  box-sizing.</h1>
     <div id="elem1"></div>
     <div id="elem2"></div>
     <h1> со свойством  box-sizing</h1>
