--- a/8 Флексы/105 Выравнивание отдельного элемента в flex модели/task105.html
+++ b/8 Флексы/105 Выравнивание отдельного элемента в flex модели/task105.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="task106.css">
+    <link rel="stylesheet" href="task105.html">
 </head>
 <body>
     <p>Задание 1</p>
